--- a/src/app/demo/components/auth/login/login.component.html
+++ b/src/app/demo/components/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
     <div class="flex flex-column align-items-center justify-content-center">
-        <img src="assets/layout/images/{{layoutService.config.colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg" alt="Sakai logo" class="mb-5 w-6rem flex-shrink-0">                
+        <img src="assets/layout/images/logo-IOT.png" alt="IOT-Saver logo" class="mb-5 w-6rem flex-shrink-0">                
         <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
             <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
                 <div class="text-center mb-5">
                     <img src="assets/demo/images/login/avatar.png" alt="Image" height="50" class="mb-3">
-                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Isabel!</div>
+                    <div class="text-900 text-3xl font-medium mb-3">Welcome, Team!</div>
                     <span class="text-600 font-medium">Sign in to continue</span>
                 </div>
 
@@ -16,16 +16,44 @@
                     <label for="password1" class="block text-900 font-medium text-xl mb-2">Password</label>
                     <p-password id="password1" [(ngModel)]="password" placeholder="Password" [toggleMask]="true" styleClass="mb-5" inputStyleClass="w-full p-3 md:w-30rem"></p-password>
 
-                    <div class="flex align-items-center justify-content-between mb-5 gap-5">
+                    <!-- <div class="flex align-items-center justify-content-between mb-5 gap-5">
                         <div class="flex align-items-center">
                             <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
                             <label for="rememberme1">Remember me</label>
                         </div>
                         <a class="font-medium no-underline ml-2 text-right cursor-pointer" style="color: var(--primary-color)">Forgot password?</a>
-                    </div>
-                    <button pButton pRipple label="Sign In" class="w-full p-3 text-xl" [routerLink]="['/']"></button>
+                    </div> -->                    
+                </div>
+                <div>
+                    <button pButton pRipple label="Sign In" class="Primary flot-left" (click)="onLogin()"></button>
+                    <button pButton pRipple label="Register" class="Primary" style="float: right;" (click)="openRegister()"></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Register" [modal]="true" class="p-fluid">
+    <ng-template pTemplate="content">
+        <div class="field">
+            <label for="name">Name</label>
+            <input type="text" pInputText id="name" [(ngModel)]="item.name" required autofocus [ngClass]="{'ng-invalid ng-dirty' : !item.name}"/>
+            <small class="ng-dirty ng-invalid" *ngIf="!item.name">Name is required.</small>
+        </div>
+        <div class="field">
+            <label for="name">Name</label>
+            <input type="text" pInputText id="name" [(ngModel)]="item.name" required autofocus [ngClass]="{'ng-invalid ng-dirty' : !item.name}"/>
+            <small class="ng-dirty ng-invalid" *ngIf="!item.name">Name is required.</small>
+        </div>
+        <div class="field">
+            <label for="name">Name</label>
+            <input type="text" pInputText id="name" [(ngModel)]="item.name" required autofocus [ngClass]="{'ng-invalid ng-dirty' : !item.name}"/>
+            <small class="ng-dirty ng-invalid" *ngIf="!item.name">Name is required.</small>
+        </div>
+    </ng-template>
+
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="save()"></button>
+    </ng-template>
+</p-dialog>
